--- a/usage.html
+++ b/usage.html
@@ -50,6 +50,7 @@
     <div class="usage-text">
         <h2>추천 대상</h2>
         <p>웹소설, 에세이 등 창작 글쓰기에서 더 <b>다채로운 문체</b>를 만들고 싶은 분들.</p>
+        <p>그냥 내 글쓰기 습관이 궁금하신 분들.</p>
       </div>
     </div>
     </section>
