--- a/usage.html
+++ b/usage.html
@@ -15,7 +15,7 @@
 <body>
 
   <a href="index.html" class="home-btn">
-    <img src="images/home.png" alt="main">
+    <img src="images/home.svg" alt="main">
   </a>
 
 
@@ -27,14 +27,14 @@
   <div class="usage-content">
  
     <div class="icon-placeholder">
-      <img class="icon-write" src="images/write.png" alt="글쓰기 아이콘">
+      <img class="icon-write" src="images/write.svg">
     </div>
     <div class="usage-text">
       <h2>글쓰기 패턴 분석</h2>
       <p>텍스트를 <b>명사, 동사/형용사</b>로 분류하여 사용 빈도를 계산합니다.</p>
       <p>
         등장인물 이름 등 불필요한 단어는 
-        <img class="icon-filter" src="images/filter.png" alt="필터 아이콘"> 
+        <img class="icon-filter" src="images/filter.svg"> 
         필터로 제외할 수 있습니다.
       </p>
     </div>
@@ -45,7 +45,7 @@
 <section class="usage-section users">
   <div class="usage-content">
     <div class="icon-placeholder">
-      <img class="icon-users" src="images/users.png" alt="추천 대상 아이콘">
+      <img class="icon-users" src="images/users.svg">
     </div>
     <div class="usage-text">
         <h2>추천 대상</h2>
@@ -58,7 +58,7 @@
     <section class="usage-section inno">
       <div class="usage-content">
         <div class="icon-placeholder">
-          <img class="icon-inno" src="images/inno.png" alt="활용 팁 아이콘">
+          <img class="icon-inno" src="images/inno.svg">
         </div>
         <div class="usage-text">
         <h2>활용 팁</h2>
