--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>개인정보 처리방침 - 단어 빈도 분석기</title>
+  <title>개인정보 처리방침</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -56,10 +56,10 @@
 
     /* 보조 문장 (노트) */
     .note {
-      margin: 0 0 18px 0;
-      color: #9a9a9a;
-      text-align: left;
-      font-size: 0.7625rem;
+
+      color: #666666;
+      text-align: center;
+      font-size: 0.8125rem;
     }
 
     /* 각 항목 래퍼 */
@@ -84,11 +84,6 @@
       white-space: pre-wrap;
     }
 
-    .term-item ul {
-      margin: 6px 0 0 18px;
-      color: #9a9a9a;
-      font-size: 0.8125rem;
-    }
 
     .term-footer {
       margin-top: 36px;
@@ -128,13 +123,13 @@
 <div class="term-item">
   <h4>제2조 (처리하는 개인정보의 항목 및 수집방식)</h4>
   <p>본 사이트는 이용자의 개인정보를 직접 수집·저장하지 않습니다. 다만 Google AdSense/Analytics 등의 외부 서비스가 자동으로 수집할 수 있는 항목은 다음과 같습니다.</p>
-  <ul>
-    <li>IP 주소(부분 마스킹될 수 있음)</li>
-    <li>브라우저 종류 및 버전, 운영체제</li>
-    <li>접속 일시 및 페이지 뷰(방문한 페이지 정보)</li>
-    <li>접속 기기(모바일/데스크톱), 화면 해상도 등 기기정보</li>
-    <li>유입 경로(레퍼러) 및 캠페인 정보</li>
-  </ul>
+
+    <p>IP 주소(부분 마스킹될 수 있음)</p>
+    <p>브라우저 종류 및 버전, 운영체제</p>
+    <p>접속 일시 및 페이지 뷰(방문한 페이지 정보)</p>
+    <p>접속 기기(모바일/데스크톱), 화면 해상도 등 기기정보</p>
+    <p>유입 경로(레퍼러) 및 캠페인 정보</p>
+
   <p>위 항목들은 본 사이트가 직접 수집하는 것이 아니라 Google 등 외부 제공자에 의해 자동으로 수집·처리됩니다.</p>
 </div>
 
@@ -151,11 +146,11 @@
 <div class="term-item">
   <h4>제5조 (쿠키의 설치·운영 및 거부)</h4>
   <p>이용자는 브라우저 설정을 통해 쿠키 저장을 거부하거나 삭제할 수 있습니다. 쿠키 거부 시 일부 서비스(맞춤형 광고, 통계 등)의 제공이 제한될 수 있습니다.</p>
-  <ul>
-    <li>크롬: 설정 &gt; 개인정보 및 보안 &gt; 쿠키 및 기타 사이트 데이터</li>
-    <li>사파리(iOS): 설정 &gt; Safari &gt; 개인정보 보호</li>
-    <li>엣지: 설정 &gt; 쿠키 및 사이트 권한</li>
-  </ul>
+
+    <p>크롬: 설정 &gt; 개인정보 및 보안 &gt; 쿠키 및 기타 사이트 데이터</p>
+    <p>사파리(iOS): 설정 &gt; Safari &gt; 개인정보 보호</p>
+    <p>엣지: 설정 &gt; 쿠키 및 사이트 권한</p>
+
 </div>
 
 <div class="term-item">
@@ -171,26 +166,24 @@
 <div class="term-item">
   <h4>제8조 (정보주체의 권리 및 행사방법)</h4>
   <p>이용자는 Google 계정 및 Google 서비스 설정을 통해 쿠키 차단, 광고설정 변경, 데이터 열람·정정·삭제 등 권리를 행사할 수 있습니다. 관련 안내는 다음 주소들을 참조하시기 바랍니다.</p>
-  <ul>
-    <li>Google 계정의 개인정보 설정 및 관리: https://myaccount.google.com</li>
-    <li>데이터 삭제·권리 행사 안내(예): https://support.google.com/accounts/answer/3024190</li>
-  </ul>
+
+    <p>Google 계정의 개인정보 설정 및 관리: https://myaccount.google.com</p>
+    <p>데이터 삭제·권리 행사 안내(예): https://support.google.com/accounts/answer/3024190</p>
+
 </div>
 
 <div class="term-item">
   <h4>제9조 (개인정보 보호책임자)</h4>
-  <p>담당자: 사이트 운영자<br/>
-     이메일: contact@yourdomain.com</p>
+  <p>담당자: 사이트 운영자 / 이메일: contact@yourdomain.com</p>
 </div>
 
 <div class="term-item">
   <h4>제10조 (권익침해 구제 방법)</h4>
-  <ul>
-    <li>개인정보 분쟁조정위원회: 1833-6972, www.kopico.go.kr</li>
-    <li>개인정보침해신고센터: 118, privacy.kisa.or.kr</li>
-    <li>대검찰청: 1301</li>
-    <li>경찰청(사이버범죄 신고): 182</li>
-  </ul>
+<p>개인정보 분쟁조정위원회: 1833-6972, www.kopico.go.kr</p>
+<p>개인정보침해신고센터: 118, privacy.kisa.or.kr</p>
+<p>대검찰청: 1301</p>
+<p>경찰청(사이버범죄 신고): 182</p>
+
 </div>
 
 <div class="term-item">
@@ -198,7 +191,7 @@
   <p>본 개인정보 처리방침은 관련 법령·정책 또는 서비스 내용의 변경에 따라 수정될 수 있으며, 변경 시 변경·시행일 및 변경사유를 본 페이지에 게시하여 이용자가 쉽게 확인할 수 있도록 합니다.</p>
 </div>
 
-<p class="term-footer">시행일: 2025-08-20</p>
+<p class="term-footer">본 약관은 2025년 8월 20일부터 시행합니다.</p>
 
 
 </body>
