--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
 
 
     <meta property="og:title" content="웹소설 작가를 위한 단어 빈도 분석기" />
-    <meta property="og:description" content="자신의 글에서 자주 쓰는 단어를 분석하고 스타일을 개선하세요." />
+    <meta property="og:description" content="자주 쓰는 단어를 분석하고 스타일을 개선하세요." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://당신의도메인.com" />
-    <meta property="og:image" content="https://당신의도메인.com/og-image.jpg" />
-    
+    <meta property="og:url" content="https://simplesorter.cc" />
+    <meta property="og:image" content="https://simplesorter.cc/og-image.jpg" />
+    <meta name="theme-color" content="#ffffff">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Simple Sorter - 단어 빈도 분석기" />
+    <meta name="twitter:description" content="텍스트를 입력하면 단어 사용 빈도를 빠르게 분석합니다." />
+    <meta name="twitter:image" content="https://simplesorter.cc/images/og-image.png" />
 
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="mask-icon" href="images/logo.svg" color="#111111">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5CPL32SRSN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
-
-
-<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-<link rel="stylesheet" href="style.css" />
-<link rel="icon" type="image/svg+xml" href="images/logo.svg">
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-<meta name="theme-color" content="#ffffff">
-<link rel="mask-icon" href="images/logo.svg" color="#111111">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+  gtag('config', 'G-5CPL32SRSN');
+</script>
 
   </head>
   <body>
@@ -508,7 +514,7 @@ document.querySelectorAll(".custom-select").forEach(select => {
     </script>
 
 <footer class="site-footer">
-  <p>© 2025 단어 빈도 분석기. All rights reserved. &nbsp;
+  <p>© 2025 SimpleSorter. All rights reserved. &nbsp;
     <a href="privacy.html">개인정보처리방침</a> · 
     <a href="terms.html">이용약관</a>
   </p>
