--- a/privacy.html
+++ b/privacy.html
@@ -171,7 +171,7 @@
 
 <div class="term-item">
   <h4>제9조 (개인정보 보호책임자)</h4>
-  <p>담당자: 사이트 운영자 / 이메일: contact@simplesorter.cc</p>
+  <p>담당자: 운영자 / 이메일: contact@simplesorter.cc</p>
 </div>
 
 <div class="term-item">
@@ -193,4 +193,5 @@
 
 </body>
 </html>
+
 
