--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9141843690761686"
+     crossorigin="anonymous"></script>
+	  
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5CPL32SRSN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -522,4 +525,5 @@ document.querySelectorAll(".custom-select").forEach(select => {
 
 
   </body>
+
 </html>
