--- a/usage.html
+++ b/usage.html
@@ -32,11 +32,9 @@
     <div class="usage-text">
       <h2>글쓰기 패턴 분석</h2>
       <p>텍스트를 <b>명사, 동사/형용사</b>로 분류하여 사용 빈도를 계산합니다.</p>
-      <p>
-        등장인물 이름 등 불필요한 단어는 
+      <p>등장인물 이름 등 불필요한 단어는 
         <img class="icon-filter" src="images/filter.svg"> 
-        필터로 제외할 수 있습니다.
-      </p>
+        필터로 제외할 수 있습니다.</p>
     </div>
   </div>
 </section>
@@ -94,3 +92,4 @@
 
 </body>
 </html>
+
