--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>단어 빈도 분석기 - 작가를 위한 분석 도구</title>
     <meta name="description" content="사용자 입력 텍스트에서 자주 쓰인 단어들을 두 가지로 분류해줍니다. 빠르고 직관적인 글쓰기 도우미.">
-    <meta name="keywords" content="단어 분석기, 웹소설 도구, 글쓰기 도우미, 단어 빈도 체크, 글쓰기 툴, 어휘력 향상, 포스타입 작가">
+    <meta name="keywords" content="단어 분석기, 웹소설 도구, 글쓰기 도우미, 단어 빈도 체크, 글쓰기 툴, 포스타입 작가, 포타">
 
 
     <meta property="og:title" content="웹소설 작가를 위한 단어 빈도 분석기" />
@@ -28,9 +28,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9141843690761686"
-     crossorigin="anonymous"></script>
-	  
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5CPL32SRSN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -525,6 +522,4 @@ document.querySelectorAll(".custom-select").forEach(select => {
 
 
   </body>
-
 </html>
-
