--- a/usage.html
+++ b/usage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>사용법</title>
+  <title>Simple Sorter - How to use</title>
 
 
   <link rel="stylesheet" as="style" crossorigin
@@ -32,9 +32,11 @@
     <div class="usage-text">
       <h2>글쓰기 패턴 분석</h2>
       <p>텍스트를 <b>명사, 동사/형용사</b>로 분류하여 사용 빈도를 계산합니다.</p>
-      <p class="one-line">등장인물 이름 등 불필요한 단어는 
+      <p>
+        등장인물 이름 등 불필요한 단어는 
         <img class="icon-filter" src="images/filter.svg"> 
-        필터로 제외할 수 있습니다.</p>
+        필터로 제외할 수 있습니다.
+      </p>
     </div>
   </div>
 </section>
@@ -92,5 +94,3 @@
 
 </body>
 </html>
-
-
