--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ function setMinFrequency() {
           return;
         }
         try {
-          const response = await fetch("http://127.0.0.1:8000/analyze", {
+          const response = await + fetch("/analyze", {
             method: "POST",
             headers: {
               "Content-Type": "application/json"
