--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:image" content="https://simplesorter.cc/images/og-image.png" />
 
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -523,4 +523,5 @@ document.querySelectorAll(".custom-select").forEach(select => {
 
 
   </body>
+
 </html>
