--- a/index.html
+++ b/index.html
@@ -222,6 +222,18 @@ function setMinFrequency() {
               min_freq: minFrequency
             })
           });
+          if (!response.ok) {
+            // 서버가 JSON 에러 메시지를 주도록 수정했지만, 방어적으로 처리
+            let msg = "서버 오류가 발생했습니다.";
+            try {
+              const err = await response.json();
+              if (err && err.error) msg = err.error;
+            } catch (_) {
+              const text = await response.text();
+              if (text) msg = text;
+            }
+            throw new Error(msg);
+          }
           const data = await response.json();
           const nounBody = document.querySelector("#nounTable tbody");
           const verbBody = document.querySelector("#verbTable tbody");
@@ -260,7 +272,8 @@ function setMinFrequency() {
           document.getElementById('verbTable').style.display = "table";
         } catch (err) {
           console.error(err);
-          alert("분석 중 오류가 발생했습니다.");
+          const msg = (err && err.message) ? err.message : "분석 중 오류가 발생했습니다.";
+          alert(msg);
         }
       }
 
