--- a/terms.html
+++ b/terms.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   
-  <a href="index.html" class="home-btn" aria-label="홈으로">
+  <a href="index.html" class="home-btn" aria-label="홈으로 이동">
     <img src="images/home.svg" alt="main">
   </a>
 
@@ -154,7 +154,6 @@
 ② 이용자가 본 약관을 위반하여 발생한 문제는 이용자 본인의 책임입니다.</p>
   </div>
 
-  <p class="term-footer">본 약관은 2025년 8월 21일부터 시행합니다.</p>
+  <p class="term-footer">본 약관은 2025년 8월 20일부터 시행합니다.</p>
 </body>
 </html>
-
