--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
         </a>
       </div>
       <div class="nav-links">
-        <a href="/usage.html">단어 빈도 분석기</a>
-        <a href="/tips.html">
-          <!-- <img src="/images/logo.svg"> -->
-          FAQ</a>
+        <a href="/usage">단어 빈도 분석기</a>
+        <a href="/tips">FAQ</a>
       </div>
 
       <div class="mode-toggle" onclick="toggleMode()">
