--- a/tips.html
+++ b/tips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>활용 팁 - 단어 빈도 분석기</title>
+    <title>단어 빈도 분석기</title>
     
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
     <link rel="stylesheet" href="/style.css" />
@@ -198,4 +198,5 @@
 
     </script>
 </body>
+
 </html>
