--- a/tips.html
+++ b/tips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>단어 빈도 분석기</title>
+    <title>활용 팁 - 단어 빈도 분석기</title>
     
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
     <link rel="stylesheet" href="/style.css" />
@@ -12,6 +12,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="mask-icon" href="/images/logo.svg" color="#111111">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9141843690761686"
+    crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="tips-container">
@@ -198,5 +202,4 @@
 
     </script>
 </body>
-
 </html>
