--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <link rel="mask-icon" href="/images/logo.svg" color="#111111">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9141843690761686"
+    crossorigin="anonymous"></script>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5CPL32SRSN"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
