--- a/privacy.html
+++ b/privacy.html
@@ -105,6 +105,10 @@
       }
     }
   </style>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9141843690761686"
+     crossorigin="anonymous"></script>
+
 </head>
 <body>
   <!-- 홈 버튼 (index.html로 이동) -->
