--- a/terms.html
+++ b/terms.html
@@ -98,6 +98,10 @@
       }
     }
   </style>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9141843690761686"
+     crossorigin="anonymous"></script>
+
 </head>
 <body>
   
