--- a/usage.html
+++ b/usage.html
@@ -12,6 +12,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="mask-icon" href="/images/logo.svg" color="#111111">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9141843690761686"
+    crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="usage-container">
